added vimeo to hub footer

--- a/templates/partials/footers/_auth-footer.html
+++ b/templates/partials/footers/_auth-footer.html
@@ -42,6 +42,7 @@
                     <a href="https://www.facebook.com/LocalContextsOrg/" class="socials" target="_blank" rel="noopener"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
                     <a href="https://www.youtube.com/channel/UC72kptCPm_kLfMSBFpjySNw" class="socials" target="_blank" rel="noopener"><i class="fa fa-youtube-square" aria-hidden="true"></i></a>
                     <a href="https://www.linkedin.com/company/localcontexts/" class="socials" target="_blank" rel="noopener"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+                    <a href="https://vimeo.com/localcontexts" class="socials" target="_blank" rel="noopener"><i class="fa-brands fa-square-vimeo" aria-hidden="true"></i></a>
                 </div>  
                 
             </div>
