--- a/templates/accounts/link-account.html
+++ b/templates/accounts/link-account.html
@@ -9,14 +9,29 @@
     </div>
     
     {% if socialaccount and provider == 'google' %}
-        <div class="flex-this">
-            <a class="w-50 white-btn flex-this align-center justify-center" href="{%  url 'socialaccount_connections' 'google' %}"><img class="margin-right-1" src="{% static 'images/logos/google.png' %}" alt=""><span class="margin-left-1 primary-black-text">Unlink With Google</span> <i class="fa-solid fa-link-simple-slash margin-left-55"></i></a>
-        </div>
+        <form method="post" action="{% url 'socialaccount_connections' provider='google' %}">
+            {% csrf_token %}
+            <div class="flex-this">
+                <button type="submit" class="w-50 white-btn flex-this align-center justify-center">
+                    <img class="margin-right-1" src="{% static 'images/logos/google.png' %}" alt="">
+                    <span class="margin-left-1 primary-black-text">Unlink With Google</span>
+                    <i class="fa-solid fa-link-simple-slash margin-left-55"></i>
+                </button>
+            </div>
+        </form>
     {% else %}
-        <div class="flex-this">
-            <a class="w-50 white-btn flex-this align-center justify-center" href="{% provider_login_url 'google' process='connect' %}"><img class="margin-right-1" src="{% static 'images/logos/google.png' %}" alt=""><span class="margin-left-1 primary-black-text">Link With Google</span><i class="fa-solid fa-link-simple margin-left-55"></i></a>
-        </div>
+        <form method="post" action="{% provider_login_url 'google' process='connect' %}">
+            {% csrf_token %}
+            <div class="flex-this">
+                <button type="submit" class="w-50 white-btn flex-this align-center justify-center">
+                    <img class="margin-right-1" src="{% static 'images/logos/google.png' %}" alt="">
+                    <span class="margin-left-1 primary-black-text">Link With Google</span>
+                    <i class="fa-solid fa-link-simple margin-left-55"></i>
+                </button>
+            </div>
+        </form>
     {% endif %}
 
+    {% include 'partials/_alerts.html' %}
 </div>
 {% endblock %}
