--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -62,8 +62,8 @@
         {% endif %}
 
         <div class="flex-this row margin-top-16">
-            <div class="flex-this space-between">
-                <div class="text-align-right checkbox-space">
+            <div class="flex-this align-center space-between">
+                <div class="text-align-right margin-right-1">
                     <input type="checkbox" name="terms-agreement" required>
                 </div>
                 <div class="checkbox-label w-100">
