--- a/templates/communities/upload-boundary-file.html
+++ b/templates/communities/upload-boundary-file.html
@@ -231,28 +231,41 @@
         document.querySelector('#selected-location').classList.add('invisible')
 
         try {
-        const shapeFileData = await file.arrayBuffer()
-        const geoJsonData = await shp(shapeFileData)
+          const shapeFileData = await file.arrayBuffer()
+          const geoJsonData = await shp(shapeFileData)
 
-        // merge geoJson to get unique contours
-        const distinctGeoJsonFeatures = turf.union(...geoJsonData.features)
+          // merge geoJson to get unique contours
+          let listOfFeatures = geoJsonData.features
 
-        // extract boundary from each unique contour
-        // there will be one boundary per contour
-        const distinctboundary = [].concat(...distinctGeoJsonFeatures.geometry.coordinates).map(arr => arr)
+          if (geoJsonData.length) {
+                // flatten features from multiple geoJson objects
+                listOfFeatures = []
+                for (const geoJsonObject of geoJsonData) {
+                  for (const featureIndex in geoJsonObject.features) {
+                    listOfFeatures.push(geoJsonObject.features[featureIndex])
+                  }
+                }
+            }
+          const firstBoundaryGeometry = listOfFeatures[0]
+          let firstBoundary = [].concat(...firstBoundaryGeometry.geometry.coordinates).map(arr => arr)
 
-        // for each distinct new boundary a boundary ui element is created
-        // and populated with boundary data from shape file
-        for(let i = 0; i < distinctboundary.length; i++) {
-          const distinctBoundaryReordered = distinctboundary[i].map(function(coordinate){
+          if (firstBoundaryGeometry.geometry.type === 'MultiPolygon') {
+              // when polygon is made up of multiple polygons, use the first
+              firstBoundary = firstBoundary[0]
+            }
+
+          if(listOfFeatures.length > 1) {
+              alert('Warning:\nThere Are More Than 1 Boundary Present. Only The First Will Be Used.')
+            }
+
+          const distinctBoundaryReordered = firstBoundary.map(function(coordinate){
               // reverse so code extracts (lat-lon)'s
               return [coordinate[1], coordinate[0]]
             }
           )
 
           // upload shape file to session for community
-          await registerBoundary(geoJsonData.fileName, [distinctBoundaryReordered], i === 0)
-        }
+          await registerBoundary(geoJsonData.fileName, distinctBoundaryReordered, i === 0)
 
         successMessage.classList.toggle('invisible')
         // show and label ui elements
@@ -277,5 +290,4 @@
 
     </script>
 <script src="{% static 'javascript/shpjs.js' %}"></script>
-<script src="{% static 'javascript/turf.js' %}"></script>
 {% endblock %}
