--- a/localcontexts/static/css/register.css
+++ b/localcontexts/static/css/register.css
@@ -48,6 +48,8 @@
   border-radius: 0px 5px 5px 0px;
   font-size: 14px;
   align-items: center;
+  overflow-y: auto; /* Enable vertical scrolling */
+  max-height: 650px;
 }
 
 /* Progress Container */
