--- a/templates/accounts/link-account.html
+++ b/templates/accounts/link-account.html
@@ -2,17 +2,17 @@
 {% load socialaccount %}
 {% block settings %}
 
-<div class="flex-this column w-80   margin-right-1">
+<div class="flex-this column w-80 margin-right-1">
     <div>
         <h3>Linked Accounts</h3>
         <p>Manage, link or remove accounts connected to this account.</p>
     </div>
     
     {% if socialaccount and provider == 'google' %}
-        <form method="post" action="{% url 'socialaccount_connections' provider='google' %}">
+        <form id="unlinkForm" method="post" action="{% url 'socialaccount_connections' provider='google' %}">
             {% csrf_token %}
             <div class="flex-this">
-                <button type="submit" class="w-50 white-btn flex-this align-center justify-center">
+                <button type="button" class="w-50 white-btn flex-this align-center justify-center" onclick="showConfirmationAlert()">
                     <img class="margin-right-1" src="{% static 'images/logos/google.png' %}" alt="">
                     <span class="margin-left-1 primary-black-text">Unlink With Google</span>
                     <i class="fa-solid fa-link-simple-slash margin-left-55"></i>
@@ -33,5 +33,33 @@
     {% endif %}
 
     {% include 'partials/_alerts.html' %}
+
+    <div id="googleConfirmationAlert" class="confirmation-alert">
+        <h3>Are you sure you want to unlink the Google account?</h3>
+        <p>You'll need to use your user name {{ request.user.username }} and password next time you login.</p>
+        <div class="flex-this flex-end">     
+            <button class="primary-btn action-btn" onclick="confirmUnlink()">Unlink</button>
+            <button class="primary-btn" onclick="cancelUnlink()">Cancel</button>
+        </div>
+    </div>
 </div>
+
+<script>
+    function showConfirmationAlert() {
+        var confirmationAlert = document.getElementById('googleConfirmationAlert');
+        confirmationAlert.style.display = 'block';
+    }
+
+    function confirmUnlink() {
+        var confirmationAlert = document.getElementById('googleConfirmationAlert');
+        confirmationAlert.style.display = 'none';
+        document.getElementById('unlinkForm').submit();
+    }
+
+    function cancelUnlink() {
+        var confirmationAlert = document.getElementById('googleConfirmationAlert');
+        confirmationAlert.style.display = 'none';
+    }
+</script>
+
 {% endblock %}
