--- a/templates/accounts/link-account.html
+++ b/templates/accounts/link-account.html
@@ -34,32 +34,20 @@
 
     {% include 'partials/_alerts.html' %}
 
-    <div id="googleConfirmationAlert" class="confirmation-alert">
-        <h3>Are you sure you want to unlink the Google account?</h3>
-        <p>You'll need to use your user name {{ request.user.username }} and password next time you login.</p>
-        <div class="flex-this flex-end">     
-            <button class="primary-btn action-btn" onclick="confirmUnlink()">Unlink</button>
-            <button class="primary-btn" onclick="cancelUnlink()">Cancel</button>
+    <div id="googleConfirmationAlert" class="modal hide">
+        <div class="modal-defaults deactivate-modal flex-this column w-100">
+            <div class="w-100">
+                <div>
+                    <h2 class="primary-black-text no-top-margin">Are you sure you want to unlink the Google account?</h2>  
+                    <p>You'll need to use your user name {{ request.user.username }} and password next time you login.</p>  
+                </div>
+                <div class="flex-this w-100 text-align-center">
+                    <div class="primary-btn white-btn margin-right-1" onclick="confirmUnlink()">Unlink</div>    
+                    <div class="margin-left-1 primary-btn action-btn" onclick="cancelUnlink()">Cancel</div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
-
-<script>
-    function showConfirmationAlert() {
-        var confirmationAlert = document.getElementById('googleConfirmationAlert');
-        confirmationAlert.style.display = 'block';
-    }
-
-    function confirmUnlink() {
-        var confirmationAlert = document.getElementById('googleConfirmationAlert');
-        confirmationAlert.style.display = 'none';
-        document.getElementById('unlinkForm').submit();
-    }
-
-    function cancelUnlink() {
-        var confirmationAlert = document.getElementById('googleConfirmationAlert');
-        confirmationAlert.style.display = 'none';
-    }
-</script>
 
 {% endblock %}
