--- a/templates/snippets/notifications.html
+++ b/templates/snippets/notifications.html
@@ -9,26 +9,49 @@
 {% return_notifications researcher as researcher_notifications %}
 
 
-<div class="dropdown margin-right-8">
-    <a onclick="toggleNotifications()" class="primary-btn white-btn dropbtn"> 
-        Notifications 
-        <i 
-        class="
-            {% if unread_exist_user and 'dashboard' in request.path %} fa-solid fa-bell-on orange-text 
-            {% elif unread_exist_community %} fa-solid fa-bell-on orange-text 
-            {% elif unread_exist_institution %} fa-solid fa-bell-on orange-text 
-            {% elif unread_exist_researcher and not 'dashboard' in request.path %} fa-solid fa-bell-on orange-text 
-            {% else %} fa-regular fa-bell {% endif %} 
-            " 
-        aria-hidden="true"
-        ></i>
-    </a>
-    <div id="notification-v2" class="notification-dropdown-content">
+<div class="dropdown margin-right-8" >
+
+    {% if 'dashboard' in request.path  and scope != user %}
+        <div class="no-margin">
+            <a id="notification-button-{{scope|cut:"'"}}" onclick="toggleNotifications('{{ scope|cut:"'" }}')" class="primary-btn white-btn dropbtn border-raduis50">
+                <i 
+                class="
+                    {% if unread_exist_user and 'dashboard' in request.path and scope == user %} no-margin fa-solid fa-bell-on orange-text 
+                    {% elif unread_exist_community %} no-margin fa-solid fa-bell-on orange-text 
+                    {% elif unread_exist_institution %} no-margin fa-solid fa-bell-on orange-text 
+                    {% elif unread_exist_researcher and scope == researcher %} no-margin fa-solid fa-bell-on orange-text
+                    {% elif unread_exist_researcher and scope == researcher.id %} no-margin fa-solid fa-bell-on orange-text
+                    {% elif return_notifications %} no-margin fa-regular fa-bell 
+                    {% else %} no-margin fa-regular fa-bell {% endif %} 
+                    " 
+                aria-hidden="true"
+                ></i>
+            </a>
+        </div>
+    {% else %}
+        <div>
+            <a id="notification-button-{{scope|cut:"'"}}" onclick="toggleNotifications('{{ scope|cut:"'" }}')" class="primary-btn white-btn dropbtn"> 
+                Notifications
+                <i 
+                class="
+                    {% if unread_exist_user and 'dashboard' in request.path and scope == user %} fa-solid fa-bell-on orange-text 
+                    {% elif unread_exist_community %} fa-solid fa-bell-on orange-text 
+                    {% elif unread_exist_institution %} fa-solid fa-bell-on orange-text 
+                    {% elif unread_exist_researcher and scope == researcher %} fa-solid fa-bell-on orange-text
+                    {% elif unread_exist_researcher and scope == researcher.id %} fa-solid fa-bell-on orange-text
+                    {% elif return_notifications %} fa-regular fa-bell 
+                    {% else %} fa-regular fa-bell {% endif %} 
+                    " 
+                aria-hidden="true"
+                ></i>
+            </a>
+        </div>
+    {% endif %}
+    <div id="notification-v2-{{ scope|cut:"'" }}" class="notification-dropdown-content">
     <div class="border-bottom-solid-teal center-text">
         <span class="orange-text bold">Notifications</span>
     </div>
-
-        {% if user_notifications and '/dashboard/' in request.path %}
+        {% if user_notifications and '/dashboard/' in request.path and scope == user %}
             {% for n in user_notifications %}
 
                 <div class="border-bottom-solid-teal flex-this space-between">
@@ -70,7 +93,7 @@
         {% endif %}
 
 
-        {% if community %}
+        {% if community and scope == community %}
 
             {% if community_notifications %}
                 {% for n in community_notifications %}
@@ -130,7 +153,7 @@
 
         {% endif %}
 
-        {% if institution %}
+        {% if institution  and scope == institution %}
 
             {% if institution_notifications %}
                 {% for n in institution_notifications %}
@@ -183,7 +206,7 @@
 
         {% endif %}
         
-        {% if researcher and not '/dashboard/' in request.path %}
+        {% if researcher and scope == researcher.id or scope == researcher %}
 
             {% if researcher_notifications %}
                 {% for n in researcher_notifications %}
