transparent embed page background

--- a/templates/projects/embed-project.html
+++ b/templates/projects/embed-project.html
@@ -265,4 +265,10 @@
             </div>
         </div>
     </body>
+
+    <style>
+        body {
+            background: none transparent;
+        }
+    </style>
 </html>
