--- a/templates/projects/embed-project.html
+++ b/templates/projects/embed-project.html
@@ -261,7 +261,7 @@
         <div class="flex-this wrap w-100">
             <div class="flex-this ">
                 <div class="margin-left-8 margin-right-8 padding-bottom-1 pad-top-1"><a href="https://localcontexts.org"><img style="width:30px;" src="https://localcontexts.org/wp-content/uploads/2023/04/White-Background.png" alt="Local Contexts Icon"></a></div>
-                <div class="auto-margin font-size-14"><a id="project-link" class="darkteal-text underline-hover bold" href="{{project.project_page}}">{{project.project_page}}</a></div>
+                <div class="auto-margin font-size-14"><a id="project-link" class="darkteal-text underline-hover bold" target="_blank" href="{{project.project_page}}">Local Contexts Project: {{project.title}}</a></div>
             </div>
         </div>
     </body>
