--- a/templates/settings-base.html
+++ b/templates/settings-base.html
@@ -12,7 +12,7 @@
             <div class="side-nav-container">
                 <a class="side-nav-a" href="{% url 'update-profile' %}">
                     <div class="side-nav-item {% if 'update-profile' in request.path %} selected {% else %} grey-text {% endif %}">
-                        <div><i class="fa fa-user" aria-hidden="true"></i></div>
+                        <div class="w-20 margin-left-8 margin-top-8"><i class="fa-solid fa-circle-user fa-3x"></i></div>
                         <div>
                             <p class="no-top-margin"><strong>Profile</strong><br>Contact name, email, location</p>
                         </div>  
