remove grey text in settings only

--- a/templates/partials/_update-account.html
+++ b/templates/partials/_update-account.html
@@ -271,13 +271,12 @@
 
                     <div>
                         <p>
-                            <small class="grey-text">Providing your personal information is optional.
+                            <small>Providing your personal information is optional.
                                 By providing it, you consent for it to be shown to other Hub users, see the <a href="https://localcontexts.org/privacy-policy/" class="darkteal-text underline-hover" target="_blank" rel="noopener">Privacy Policy <i class="fa-solid fa-arrow-up-right-from-square fa-xs"></i></a>.</small>
                         </p> 
                         <div class="margin-top-16 w-50">
                             <button class="primary-btn action-btn margin-top-2">Save changes <i class="fa fa-arrow-right"></i></button>
                         </div>
-
                     </div>
                 </form>
             </div>
