added alignment selection for embed

--- a/templates/partials/_project-actions.html
+++ b/templates/partials/_project-actions.html
@@ -744,6 +744,10 @@
                                             {% endfor %}
                                         {% endif %}
                                     </select>
+                                    <select id="embedAlignOptions" name="align" class="project-sort w-30 margin-top-1 margin-right-1">
+                                        <option class="darkteal-text pointer" value="left" selected>Left Align</option>
+                                        <option class="darkteal-text pointer" value="right">Right Align</option>
+                                    </select>
                                 </div>
                             </div>
 
