--- a/templates/projects/embed-project.html
+++ b/templates/projects/embed-project.html
@@ -8,31 +8,14 @@
     </head>
 
     <body>
-        <!-- Icons w/o title -->
-        <div id="img-only" class="flex-this flex-start wrap w-100 margin-top-1">
-            {% if project.has_bclabels or project.has_tklabels %}
-                {% for community, labels in label_groups.items %}
-                    {% for tklabel in labels.tk_labels %}
-                        <div class="margin-left-1 margin-right-1">
-                            <img loading="lazy" class="margin-bottom-8 img-sizedown-small pointer" src="{{ tklabel.img_url }}" alt="">
-                        </div>
-                    {% endfor %}
-                    {% for bclabel in labels.bc_labels %}
-                        <div class="margin-left-1 margin-right-1">
-                            <img loading="lazy" class="margin-bottom-8 img-sizedown-small pointer" src="{{ bclabel.img_url }}" alt="">
-                        </div>
-                    {% endfor %}
-                {% endfor %}
-            {% endif %}
-        </div>
-
-        <!-- Icons w/o title -->
+        
         {% if not layout or layout == "1" %}
-            <div class="flex-this flex-start wrap w-100 margin-top-1">
+        <!-- Icons w/o title -->
+            <div class="flex-this {% if align == 'right' %}flex-end{% else %}flex-start{% endif%} wrap w-100 margin-top-1">
                 {% if notices %}
                     {% for notice in notices %}
                         <div class="margin-left-1 margin-right-1">
-                            <img loading="lazy" class="margin-bottom-8 img-sizedown-small pointer" src="{{ notice.img_url }}" alt="">
+                            <img loading="lazy" class="margin-bottom-8 img-sizedown-small pointer" src="https://storage.googleapis.com/local-contexts-hub-develop.appspot.com/labels/notices/tk-notice.png" alt="">
                         </div>
                     {% endfor %}
                 {% endif %}
@@ -54,8 +37,9 @@
             </div>
         {% endif%}
 
-        <!-- Icons w/ title -->
+        
         {% if layout == "2" %}
+        <!-- Icons w/ title -->
             <div class="flex-this wrap w-100">
                 {% if notices %}
                     {% for notice in notices %}
@@ -150,8 +134,9 @@
             </div>
         {% endif%}
 
-        <!-- Full Text -->
+        
         {% if layout == "3" %}
+        <!-- Full Text -->
             <div class="flex-this wrap w-100">
                 {% if notices %}
                     {% for notice in notices %}
@@ -258,10 +243,16 @@
             </div>
         {% endif %}
 
-        <div class="flex-this wrap w-100">
+        <div class="flex-this wrap w-100 {% if align == 'right' %}flex-end{% endif %}">
             <div class="flex-this ">
-                <div class="margin-left-8 margin-right-8 padding-bottom-1 pad-top-1"><a href="https://localcontexts.org"><img style="width:30px;" src="https://localcontexts.org/wp-content/uploads/2023/04/White-Background.png" alt="Local Contexts Icon"></a></div>
-                <div class="auto-margin font-size-14"><a id="project-link" class="darkteal-text underline-hover bold" target="_blank" href="{{project.project_page}}">Local Contexts Project: {{project.title}}</a></div>
+                <div class="margin-left-8 margin-right-8 padding-bottom-1 pad-top-1" style="display: inherit;">
+                    <a href="https://localcontexts.org" style="display: inline-flex;">
+                        <img style="width:30px;" src="https://localcontexts.org/wp-content/uploads/2023/04/White-Background.png" alt="Local Contexts Icon">
+                    </a>
+                </div>
+                <div class="auto-margin font-size-14 margin-right-8">
+                    <a id="project-link" class="darkteal-text underline-hover bold" target="_blank" href="{{project.project_page}}">Local Contexts Project: {{project.title}}</a>
+                </div>
             </div>
         </div>
     </body>
