--- a/templates/accounts/update-profile.html
+++ b/templates/accounts/update-profile.html
@@ -4,6 +4,7 @@
 <div class="flex-this column w-50   margin-right-1">
     <div class="flex-this space-between">
         <div><h3 class="no-top-margin">Profile Information</h3></div>
+        <div>User Name: {{ request.user.username }}</div>
         <div>User ID: {{ request.user.id }}</div>
     </div>
 
