--- a/templates/partials/infocards/_community-card.html
+++ b/templates/partials/infocards/_community-card.html
@@ -25,10 +25,12 @@
         <div class="dashcard-btn-container">
             <div class="margin-left-16 flex-this gap-1">
                 {% if '/registry/' in request.path %}
-                    <a 
-                        class="primary-btn action-btn"
-                        href="{% url 'public-community' community.id %}" 
-                    >View public page</a>
+                    <div class="margin-left-16"> 
+                        <a 
+                            class="primary-btn action-btn"
+                            href="{% url 'public-community' community.id %}" 
+                        >View public page</a>
+                    </div> 
                 {% endif %}
 
                 <div class="margin-right-8">                 
@@ -46,13 +48,15 @@
                         <a class="primary-btn action-btn" href="{% url 'select-label' community.id %}">View account</a>
                     {% endif %}
                 </div>
-                <!-- Notification -->
-                {% include 'snippets/notifications.html' with scope=community %}
-                <!-- Settings -->
-                {% if request.user == community.community_creator or member_role == 'admin' %}
-                    <div>
-                        <a href="{% url 'update-community' community.id %}" class=" border-raduis50 darkteal-text primary-btn white-btn"><i class=" no-margin fa fa-cog" aria-hidden="true"></i></a>
-                    </div>
+                {% if '/dashboard/' in request.path %}
+                    <!-- Notification -->
+                    {% include 'snippets/notifications.html' with scope=community %}
+                    <!-- Settings -->
+                    {% if request.user == community.community_creator or member_role == 'admin' %}
+                        <div>
+                            <a href="{% url 'update-community' community.id %}" class=" border-raduis50 darkteal-text primary-btn white-btn"><i class=" no-margin fa fa-cog" aria-hidden="true"></i></a>
+                        </div>
+                    {% endif %}
                 {% endif %}
             </div>
         </div>
